--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-slick": "^0.30.3",
     "sharp": "^0.34.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
